# crypto-sidecar

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  AUDIT-FINAL-2026-04-29.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  SECURITY.md  alembic.ini  audit-backend.md  audit-devops.md  audit-frontend.md  audit-quality-polish.md  audit-security.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-please.yml  release.yml  rust.yml
docs/: ARCHITECTURE.md  CONVENTIONS.md  CRYPTO_DECISIONS.md  DEVELOPMENT.md  NFR_VERIFICATION.md  SPEC.md  THREAT_MODEL.md
docs/adr/: 0000-record-architectural-decisions.md  0001-use-tauri-2-with-python-sidecar.md  0002-aes-gcm-with-dual-kdf.md  0003-sqlcipher-for-database-at-rest.md  0004-rsa-oaep-hybrid-sharing.md  0005-vite-over-nextjs-for-tauri.md  0006-uv-over-poetry.md  0007-conventional-commits-release-please.md  0008-spec-driven-development.md  0009-github-fine-grained-pat.md  0010-license-apache-2.md  0011-defer-cross-platform-database-encryption.md  0012-pyinstaller-now-nuitka-migration.md  0013-crypt-container-v1-format.md  0014-chunk-bound-aad-stream-aead.md  0015-anti-oracle-stderr-unification.md  0016-tauri-sidecar-ipc-security.md  0017-frontend-state-management-split.md  0018-windows-authenticode-dev-cert.md  0019-supersede-sqlcipher-with-column-level-aes-gcm.md
docs/security-audits/: 2026-04-27-final-pre-release.md  2026-04-27-pre-release.md
docs/soutenance/: demo_script.md  exam_theorique_notes.md  feature_mapping.md  qa_theorique.md  slides_outline.md
docs/specs/000-cli/: plan.md  spec.md  tasks.md
docs/specs/000-multi-user/: plan.md  spec.md  tasks.md
docs/specs/000-tauri-frontend/: plan.md  spec.md  tasks.md
docs/specs/000-tauri-sidecar/: plan.md  spec.md  tasks.md
docs/specs/000-tui/: plan.md  spec.md  tasks.md
docs/specs/001-encrypt-file/: plan.md  spec.md  tasks.md
docs/specs/002-decrypt-file/: plan.md  spec.md  tasks.md
docs/specs/003-rsa-share/: plan.md  spec.md  tasks.md
docs/specs/004-secure-delete/: plan.md  spec.md  tasks.md
scripts/: build_sidecar.py  check_coverage_gates.py  generate_placeholder_icons.py  smoke_bundled_binary.py  verify_nfr.py
src/guardiabox/: __init__.py  __main__.py  config.py  logging.py
src/guardiabox/core/: __init__.py  constants.py  container.py  crypto.py  exceptions.py  kdf.py  operations.py  protocols.py  rsa.py  secure_delete.py  share_token.py
src/guardiabox/fileio/: __init__.py  atomic.py  platform.py  safe_path.py  streaming.py
src/guardiabox/persistence/: __init__.py  bootstrap.py  database.py  models.py  repositories.py
src/guardiabox/persistence/migrations/: __init__.py  env.py
src/guardiabox/persistence/migrations/versions/: 20260424_0001_initial_schema.py  20260429_0001_audit_log_trigger_allow_actor_set_null.py  __init__.py
src/guardiabox/security/: __init__.py  audit.py  constant_time.py  keystore.py  password.py  vault_admin.py
src/guardiabox/tests/: __init__.py
src/guardiabox/ui/: __init__.py
src/guardiabox/ui/cli/: _session.py  _vault_audit.py  io.py  main.py
src/guardiabox/ui/cli/commands/: __init__.py  accept.py  config.py  decrypt.py  doctor.py  encrypt.py  history.py  init.py  inspect.py  menu.py  secure_delete.py  share.py  user.py
src/guardiabox/ui/tauri/: __init__.py
src/guardiabox/ui/tauri/frontend/: .gitignore  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/guardiabox/ui/tauri/frontend/src/: App.tsx  i18n.ts  index.css  main.tsx
src/guardiabox/ui/tauri/sidecar/: __init__.py  app.py  main.py  state.py
src/guardiabox/ui/tauri/src-tauri/: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/guardiabox/ui/tauri/src-tauri/capabilities/: default.json
src/guardiabox/ui/tauri/src-tauri/icons/: icon.icns
src/guardiabox/ui/tauri/src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/guardiabox/ui/tui/: __init__.py  app.py  app.tcss  main.py
src/guardiabox/ui/tui/screens/: __init__.py  dashboard.py  decrypt.py  encrypt.py  history.py  settings.py  share.py
src/guardiabox/ui/tui/widgets/: __init__.py  password_field.py  toast.py
tests/: conftest.py
tests/integration/: test_audit_chain.py  test_cli_crypto_erase.py  test_cli_encrypt_decrypt.py  test_cli_init.py  test_cli_phase_c2_inprocess.py  test_cli_phase_e.py  test_cli_share_accept.py  test_cli_user_history_doctor.py  test_cli_vault_audit_hook.py  test_persistence_database.py  test_persistence_migrations.py  test_phase_i_regressions.py  test_repositories.py  test_share_accept.py  test_sidecar_api_full.py  test_sidecar_subprocess.py  test_tui_app.py
tests/perf/: __init__.py  test_bench.py
tests/property/: test_crypto_roundtrip.py  test_fuzz_parser.py  test_kdf_encode_roundtrip.py  test_rsa_roundtrip.py  test_share_token_roundtrip.py  test_sidecar_handshake.py  test_sidecar_schemas.py  test_stream_roundtrip.py
tests/unit/: test_anti_partial_output.py  test_atomic.py  test_cli_anti_oracle.py  test_cli_commands.py  test_cli_io.py  test_cli_menu.py  test_cli_secure_delete.py  test_cli_tampering.py  test_column_encryption.py  test_config.py  test_constant_time.py  test_constants.py  test_container.py  test_crypto.py  test_inspect.py  test_kat_vectors.py  test_kdf.py  test_keystore.py  test_logging.py  test_operations.py  test_password.py  test_persistence_models.py  test_platform.py  test_rsa.py  test_safe_path.py  test_secure_delete.py  test_share_token.py  test_sidecar_app.py  test_sidecar_audit_router.py  test_sidecar_bind_security.py  test_sidecar_encrypt_decrypt.py  test_sidecar_inspect_init_doctor_secure_delete.py  test_sidecar_main.py  test_sidecar_middleware.py  test_sidecar_schemas.py  test_sidecar_share_router.py  test_sidecar_state.py  test_sidecar_users_router.py  test_sidecar_vault_router.py  test_sidecar_ws.py  (+3 more)
(+60 files in other folders)
