# ============================================================================
# GuardiaBox — local secure vault
# Project metadata + Python tooling configuration
# ============================================================================

[project]
name = "guardiabox"
version = "0.1.0"
description = "Local secure vault: encrypt, decrypt, store, and share files offline."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Sacha Marlov", email = "sachamarlov@users.noreply.github.com" },
]
maintainers = [
    { name = "Sacha Marlov", email = "sachamarlov@users.noreply.github.com" },
]
keywords = [
    "cryptography",
    "vault",
    "encryption",
    "AES-GCM",
    "Argon2id",
    "PBKDF2",
    "RSA-OAEP",
    "zero-knowledge",
    "offline-first",
    "tauri",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Utilities",
    "Typing :: Typed",
]

dependencies = [
    # --- Cryptography ---
    "cryptography>=46.0.0",
    "argon2-cffi>=23.1.0",
    "zxcvbn>=4.5.0",
    # --- Web sidecar ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    # --- Persistence ---
    # SQLCipher is required for at-rest database encryption (ADR-0003).
    # Linux: pre-built wheel via sqlcipher3-binary.
    # Windows / macOS: install system sqlcipher first, then build sqlcipher3
    # from source -- see docs/DEVELOPMENT.md.  ADR-0011 supersedes 0003 and
    # documents the column-level AES-GCM fallback we ship for platforms
    # where the native dep is unavailable, so the security floor is
    # preserved end-to-end (filenames + audit log are encrypted at rest
    # regardless of which storage backend is in use).
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "sqlcipher3-binary>=0.5.4 ; sys_platform == 'linux'",
    # --- CLI / TUI ---
    "typer>=0.15.0",
    "textual>=0.89.0",
    "rich>=13.9.0",
    # --- Logging & observability ---
    "structlog>=24.4.0",
    # --- Utilities ---
    "anyio>=4.6.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]

dev = [
    # Lint, format, type-check
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Security
    "bandit[toml]>=1.7.10",
    "pip-audit>=2.7.3",
    "detect-secrets>=1.5.0",
    # Pre-commit
    "pre-commit>=4.0.0",
    # SBOM
    "cyclonedx-bom>=5.0.0",
    # Dev REPL & debugging
    "ipython>=8.29.0",
    "textual-dev>=1.7.0",
]

test = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.0",
    "pytest-randomly>=3.16.0",
    "hypothesis>=6.115.0",
    "freezegun>=1.5.0",
    "respx>=0.21.1",
]

# Source-built SQLCipher binding for Windows / macOS (where no PyPI wheel
# exists). Requires the SQLCipher system library installed first:
#   Windows : vcpkg install sqlcipher
#   macOS   : brew install sqlcipher
# Then:    uv sync --extra sqlcipher-source
# See ADR-0011 for the cross-platform strategy.
sqlcipher-source = [
    "sqlcipher3>=0.5.4 ; sys_platform != 'linux'",
]

build = [
    "pyinstaller>=6.11.0",
    "pyinstaller-hooks-contrib>=2024.10",
]

docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]

all = [
    "guardiabox[dev,test,build,docs,sqlcipher-source]",
]

[project.urls]
Homepage      = "https://github.com/sachamarlov/crypto-sidecar"
Repository    = "https://github.com/sachamarlov/crypto-sidecar"
Issues        = "https://github.com/sachamarlov/crypto-sidecar/issues"
Documentation = "https://github.com/sachamarlov/crypto-sidecar/tree/main/docs"
Changelog     = "https://github.com/sachamarlov/crypto-sidecar/blob/main/CHANGELOG.md"

[project.scripts]
guardiabox         = "guardiabox.__main__:main"
guardiabox-tui     = "guardiabox.ui.tui.main:run"
guardiabox-sidecar = "guardiabox.ui.tauri.sidecar.main:main"

# ============================================================================
# Build system
# ============================================================================

[build-system]
requires      = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/guardiabox"]

[tool.hatch.build.targets.sdist]
include = [
    "src/guardiabox",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]
exclude = [
    "src/guardiabox/ui/tauri/frontend/node_modules",
    "src/guardiabox/ui/tauri/src-tauri/target",
]

# ============================================================================
# uv
# ============================================================================

[tool.uv]
package           = true
required-version  = ">=0.5.0"

# Note: `default-groups` is intentionally omitted. Use
#   `uv sync --extra dev --extra test`
# (or `uv sync --all-extras` locally) to install dev/test dependencies.

[tool.uv.sources]
# Reserved for path/git overrides if needed.

# ============================================================================
# Ruff (lint + format)
# ============================================================================

[tool.ruff]
line-length     = 100
target-version  = "py312"
src             = ["src", "tests", "scripts"]
extend-exclude  = [
    "src/guardiabox/ui/tauri/frontend",
    "src/guardiabox/ui/tauri/src-tauri/target",
]

[tool.ruff.lint]
preview = true
select  = [
    "F",    # pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "D",    # pydocstyle
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
    "ASYNC",# flake8-async
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T10",  # flake8-debugger
    "EM",   # flake8-errmsg
    "FA",   # flake8-future-annotations
    "ISC",  # flake8-implicit-str-concat
    "ICN",  # flake8-import-conventions
    "G",    # flake8-logging-format
    "INP",  # flake8-no-pep420
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "Q",    # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TC",   # flake8-type-checking
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "ERA",  # eradicate (commented-out code)
    "PGH",  # pygrep-hooks
    "PL",   # pylint
    "TRY",  # tryceratops
    "FLY",  # flynt
    "PERF", # perflint
    "FURB", # refurb
    "LOG",  # flake8-logging
    "RUF",  # ruff-specific
]
ignore = [
    # Documentation style — pragmatic defaults
    "D100",    # Missing docstring in public module — handled module-by-module
    "D102",    # Missing docstring in public method — class docstrings cover stubs
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic methods
    "D107",    # Missing docstring in __init__ (class docstring covers it)
    "D203",    # Conflicts with D211
    "D213",    # Conflicts with D212

    # Type annotation policy
    "ANN401",  # Allow `Any` when explicitly justified

    # Format conflicts (must stay; documented by ruff itself)
    "ISC001",  # Conflicts with ruff format
    "COM812",  # Conflicts with ruff format

    # Pylint pragmatics
    "PLR2004", # Magic numbers OK in tests
    "PLR0913", # Argument count — judgement call
    "PLR6301", # Framework-mandated instance methods (Textual `compose`, ...)

    # Try / Except messages — TRY003 covers them at the source
    "TRY003",
    "EM101",
    "EM102",

    # Boolean positional args — OK for small internal APIs
    "FBT001",
    "FBT002",

    # TYPE_CHECKING optimisation — kept off for the bootstrap; will be enforced
    # per-feature once we have a stable type-import surface
    "TC001",
    "TC002",
    "TC003",

    # CLI ergonomics
    "ARG001",  # Typer / Click callbacks require `ctx` even unused
    "PLC0415", # Lazy imports inside CLI launchers (cold-start performance)
]
unfixable = [
    "ERA001", # commented code — never auto-remove, always review
    "F401",   # unused imports — review case by case
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert OK in tests
    "S105",   # hardcoded password OK in tests
    "S106",   # hardcoded password OK in tests
    "S404",   # subprocess import OK in integration tests
    "S603",   # subprocess argument content validated at call site
    "ANN201", # missing return type OK in tests
    "D",      # docstrings optional in tests
    "PLR2004",# magic numbers OK in tests
    "ARG",    # fixtures injected as args
    "PLC2701",# importing private module internals is legitimate in tests
    "PLC0415",# local imports are fine in helpers and fixtures
    "ERA001", # example command lines in KAT docstrings look like commented code
]
"src/guardiabox/ui/tauri/sidecar/**/*.py" = [
    "B008",   # FastAPI Depends() in defaults is the convention
]
"src/guardiabox/ui/cli/commands/**/*.py" = [
    "B008",   # Typer Argument()/Option() in defaults is the convention
    "PLR0913",# CLI commands accumulate options by design
]
"src/guardiabox/__init__.py" = ["D104"]
# Helper scripts: importable as modules but not packaged with guardiabox.
"scripts/*.py" = [
    "INP001",  # not part of an implicit package
    "I001",    # local import-sort rules less strict
    "T201",    # print() used as user-facing CLI output
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["guardiabox"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style              = "double"
indent-style             = "space"
docstring-code-format    = true
skip-magic-trailing-comma = false

# ============================================================================
# Mypy (fallback type checker; primary is `ty` once stable)
# ============================================================================

[tool.mypy]
python_version       = "3.12"
strict               = true
warn_unreachable     = true
warn_redundant_casts = true
show_error_codes     = true
pretty               = true
files                = ["src", "tests"]
exclude              = [
    "src/guardiabox/ui/tauri/frontend",
    "src/guardiabox/ui/tauri/src-tauri",
]

[[tool.mypy.overrides]]
module = ["argon2.*", "zxcvbn.*", "sqlcipher3.*", "structlog.*"]
ignore_missing_imports = true

# ============================================================================
# Pytest
# ============================================================================

[tool.pytest.ini_options]
minversion          = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
    "--cov=guardiabox",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    # 80 % is the binding contract from CONVENTIONS.md. The smoke-test suite
    # already crosses 90 % on import alone — implementation work must keep
    # the floor above 80 %, never below.
    "--cov-fail-under=80",
]
testpaths    = ["tests", "src/guardiabox/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "slow: tests marked as slow (deselect with -m 'not slow')",
    "integration: integration tests requiring external resources",
    "e2e: end-to-end tests",
    "property: property-based (hypothesis) tests",
    "security: security-focused tests (bandit / fuzzing)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:cryptography.*",
    # SQLAlchemy aiosqlite sockets + asyncio event loops are sometimes
    # GC'd after the loop closes on CI runners (Linux + Windows Python
    # 3.12); the resulting `PytestUnraisableExceptionWarning` is raised
    # from inside _pytest / stdlib cleanup code and is not ours to fix.
    # The filter targets that class only -- every other warning stays
    # elevated to an error. Re-review on each test-harness upgrade.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# ============================================================================
# Coverage
# ============================================================================

[tool.coverage.run]
source        = ["src/guardiabox"]
branch        = true
parallel      = true
omit = [
    "src/guardiabox/ui/tauri/frontend/*",
    "src/guardiabox/__main__.py",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
precision         = 2
show_missing      = true
skip_covered      = false
skip_empty        = true
sort              = "Cover"
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "@overload",
    "pragma: no cover",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# Bandit
# ============================================================================

[tool.bandit]
targets = ["src"]
exclude_dirs = [
    "tests",
    "src/guardiabox/ui/tauri/frontend",
    "src/guardiabox/ui/tauri/src-tauri",
]
skips = [
    # B101: assert_used — we use assert defensively in dev; pytest tests are
    # excluded by exclude_dirs. Re-enable when assertions creep into prod paths.
]

[tool.bandit.assert_used]
skips = ["**/tests/**", "**/test_*.py", "**/*_test.py"]

# ============================================================================
# Detect-secrets
# ============================================================================

[tool.detect-secrets]
baseline   = ".secrets.baseline"

# ============================================================================
# Hatch (alt build backend / scripts)
# ============================================================================

[tool.hatch.version]
path = "src/guardiabox/__init__.py"
