[package]
name = "guardiabox"
version = "0.1.0"
description = "GuardiaBox Tauri shell — local secure vault."
authors = ["Sacha Marlov <sachamarlov@users.noreply.github.com>"]
license = "Apache-2.0"
repository = "https://github.com/sachamarlov/crypto-sidecar"
default-run = "guardiabox"
edition = "2021"
rust-version = "1.77"

[lib]
name = "guardiabox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-clipboard-manager = "2.0.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.0.3"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-notification = "2.0.0"
tauri-plugin-os = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-shell = "2.0.1"
tauri-plugin-store = "2.4.3"
tauri-plugin-window-state = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
